--- a/dada/extras/documentation/pod_source/features-subscription_approval.pod
+++ b/dada/extras/documentation/pod_source/features-subscription_approval.pod
@@ -69,4 +69,21 @@ to deny requests.
 
 This is a new, experimental feature and we'd like feedback on how it's working for everyone. Let us know!
 
+=head1 Shortcomings 
+
+=head2 "Subscription" Options disabled 
+
+Since this feature basically skips *over* all the options you can set in the, I<Subscriptions> fieldset in the, 
+I<Your Mailing List - Mailing List Options> screen, 
+so none of those options are available, if this feature is turned on. 
+
+=head2 Nothing's really easily editable
+
+Even though the email messages that get sent out and the, "Subscription Successful" HTML message *are* templated out, the 
+interface to edit them on a per-list basis has not been made. 
+
+You may edit them on a installation-wide basis by editing the defaults in the Config.pm file. 
+
+
+
 =cut
